// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadForm tests should disable fields when submitting 1`] = `
<Fragment>
  <form>
    <Stack>
      <Field
        component={[Function]}
        disabled={true}
        fileType="csv"
        helpText={
          <span>
            You can download an
             
            <DownloadLink
              href="example-suppressions-list.csv"
            >
              example file here
            </DownloadLink>
             
            to use when formatting your list of suppressions for upload.
          </span>
        }
        label="CSV File of Suppressions"
        name="suppressionsFile"
        required={true}
        validate={
          Array [
            [Function],
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Box
        maxWidth="860px"
      >
        <Field
          component={[Function]}
          disabled={true}
          helpText="Leaving this field blank will add the suppressions to the master account."
          name="subaccount"
        />
      </Box>
    </Stack>
    <ButtonWrapper>
      <Button
        disabled={true}
        type="submit"
        variant="primary"
      >
        Upload
      </Button>
    </ButtonWrapper>
  </form>
</Fragment>
`;

exports[`UploadForm tests should render upload form 1`] = `
<Fragment>
  <form>
    <Stack>
      <Field
        component={[Function]}
        disabled={false}
        fileType="csv"
        helpText={
          <span>
            You can download an
             
            <DownloadLink
              href="example-suppressions-list.csv"
            >
              example file here
            </DownloadLink>
             
            to use when formatting your list of suppressions for upload.
          </span>
        }
        label="CSV File of Suppressions"
        name="suppressionsFile"
        required={true}
        validate={
          Array [
            [Function],
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Box
        maxWidth="860px"
      >
        <Field
          component={[Function]}
          disabled={false}
          helpText="Leaving this field blank will add the suppressions to the master account."
          name="subaccount"
        />
      </Box>
    </Stack>
    <ButtonWrapper>
      <Button
        disabled={false}
        type="submit"
        variant="primary"
      >
        Upload
      </Button>
    </ButtonWrapper>
  </form>
</Fragment>
`;
